--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "morgan": "^1.7.0",
     "nodemon": "^1.10.2",
     "request": "^2.74.0"
-  }
+  },
+  "engines": {
+    "node": "4.5.0"
+  } 
 }
